2006-08-25  Gert Driesen  <drieseng@users.sourceforge.net>

	* Initial import