@@ -1,3 +1,8 @@
+2006-08-26  Gert Driesen  <drieseng@users.sourceforge.net>
+
+	* Makefile: Added conditional compilation symbols. Treat warnings as
+	errors.
+
 2006-08-25  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* Initial import
